--- a/templates/view_image.html
+++ b/templates/view_image.html
@@ -6,15 +6,20 @@
     <title>View Image</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
 </head>
 <body class = body>
-    
     <div class="imgViewHeader">
-        <p class = "backArrow"><a href="/"><i  style = "color: #000000" class="fa fa-long-arrow-left"></i></a></p>
-        <form action="{{ url_for('delete_image', filename=metadata.filename) }}" method="POST">
-            <button class = "deleteButton" type="submit"><i class="fa fa-trash"></i> Delete Photo</button>
+        <p class="backArrow">
+            <a href="/"><i style="color: #000000" class="fa fa-long-arrow-left"></i></a>
+        </p>
+        <form action="{{ url_for('delete_image', uid=session['uid'], filename=metadata.filename) }}" method="POST">
+            <button class="deleteButton" type="submit">
+                <i class="fa fa-trash"></i> Delete Photo
+            </button>
         </form>
     </div>
+    
     
      <div class="imgViewerContainer">
         <p class = "imgViewerTitle">{{ metadata.filename }}</p>
