--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,7 +23,7 @@ body,html {
     display: flex;
     align-items: center;
     padding: 10px 15px;
-    background-color: lightblue; /* Google blue */
+    background-color: lightgreen; /* Google blue */
     color: #000000;
     border: none;
     border-radius: 5px;
@@ -52,7 +52,7 @@ body,html {
 /* Header */
 .header-container {
     display: flex;
-    background-color: lightblue;
+    background-color: lightgreen;
     justify-content: space-between;
     align-items: center;
 }
@@ -109,7 +109,7 @@ body,html {
     width: 100%;
     padding: 8px 0;
     border: none;
-    background: lightblue;
+    background: lightgreen;
     color: #000000;
     cursor: pointer;
 }
@@ -140,8 +140,8 @@ body,html {
      height: 50px;
      padding: 0px;
      width: 250px;
-     background-color: lightblue; 
-     border: 4px solid lightblue;
+     background-color: lightgreen; 
+     border: 4px solid lightgreen;
      text-align: left;
  }
  
@@ -151,8 +151,8 @@ body,html {
      font-weight: bold;
      text-align: left;
      margin-left: 5px;
-     background-color: lightblue;
-     border: 4px solid lightblue;
+     background-color: lightgreen;
+     border: 4px solid lightgreen;
      display: inline-block;
  }
  
@@ -171,7 +171,7 @@ body,html {
  
  .imgGrid img {
      margin-bottom: 50px;
-     border: 4px solid lightblue;
+     border: 4px solid lightgreen;
      width: 100%;
      height: 100%;
      object-fit: cover; 
@@ -235,7 +235,7 @@ body,html {
     padding: 10px 20px;
     font-size: 16px;
     color: #000000;
-    background-color: lightblue;
+    background-color: lightgreen;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -265,8 +265,8 @@ body,html {
     padding: 0px 25% 0px 25%;
     margin: 0px;
     justify-content: space-between;
-    background-color: lightblue;
-    border: 4px solid lightblue;
+    background-color: lightgreen;
+    border: 4px solid lightgreen;
     align-items: center; 
 }
 
@@ -299,7 +299,7 @@ body,html {
     color: red;
 }
 .delete {
-    background-color: lightblue;
+    background-color: lightgreen;
     display: inline-block
 }
 
